--- a/tasks/rhel-instance-docker-provider.yml
+++ b/tasks/rhel-instance-docker-provider.yml
@@ -79,11 +79,18 @@
                   root:toor
                   stack:stack
                 expire: false
+              write_files:
+                - path: /etc/sysconfig/docker-storage-setup
+                  content: |
+                    DEVS=/dev/vdb
+                    VG=docker-vg
               runcmd:
                 - subscription-manager register --username={{rhn_username}} --password={{rhn_password}}
                 - subscription-manager attach --pool={{pool}}
                 - subscription-manager repos --disable=*
                 - subscription-manager repos --enable=rhel-7-server-rpms --enable=rhel-7-server-extras-rpms --enable=rhel-7-server-rh-common-rpms --enable=rhel-ha-for-rhel-7-server-rpms --enable=rhel-7-server-ose-3.5-rpms --enable=rhel-7-fast-datapath-rpms
+                - docker-storage-setup
+                - systemctl start docker
                 # - yum update -y
                 # - yum install wget yum-utils httpd git tmux vim createrepo  -y
                 # - sed -i '/OPTIONS=.*/c\OPTIONS="--selinux-enabled --log-driver=json-file --log-opt max-size=50m --insecure-registry 172.30.0.0/16"' /etc/sysconfig/docker
@@ -102,6 +109,7 @@
                 - nfs-utils
                 - atomic-openshift-utils
                 - telnet
+                - docker
               # fs_setup:
               #  - label: None
               #    filesystem: 'ext4'
