--- a/tasks/rhel-instance-floating.yml
+++ b/tasks/rhel-instance-floating.yml
@@ -1,5 +1,6 @@
 ---
     - name: create  volumes
+      # include: ./tasks/create-volume.yml
       os_volume: state=present size={{ item.volumesize }} display_name={{ item.volumename }}
       with_items:
         - { volumesize: '50', volumename: 'volume1-{{ item.instancename }}' }
@@ -18,7 +19,7 @@
             volumes:
               - "volume1-{{ item.instancename }}"
             nics:
-              - net-name: {{ private_net }}
+              - net-name: telenor-vlan1002
             userdata: |
               #cloud-config
               cloud_init_modules:
@@ -54,10 +55,10 @@
                - keys-to-console
                - final-message
               hostname: {{ item.instancename }}
-              fqdn: {{ item.instancename }}.{{ domain_name }}
+              fqdn: {{ item.instancename }}.lab.telenor
               manage_etc_hosts: false
               debug: true
-              package_upgrade: false
+              package_upgrade: true
               users:
                 - default
                 - name: stack
@@ -66,9 +67,11 @@
                   ssh_pwauth: True
                   ssh_authorized_keys:
                     - {{IDRSAPUB}}
+                    - ssh-rsa AAAAB3NzaC1yc2EAAAABJQAAAIBuaErYJkQTbdE1NZovWf5hPanNR9liE9jeEf7gPw52kgStxy/ewX5JuFYSPQZN137G1HmIhk+FCa1XWfgL8GeTOtkHq/sIpYJChsK6QwxVd2/dQQLTrwmUgNLyM4brWQ7i0WhGeCDVIGCkvdkBOcPNaxJBb7vyt03ZemjnZhLXRQ== rsa-key-20050908
                 - name: root
                   ssh_authorized_keys:
                     - {{IDRSAPUB}}
+                    - ssh-rsa AAAAB3NzaC1yc2EAAAABJQAAAIBuaErYJkQTbdE1NZovWf5hPanNR9liE9jeEf7gPw52kgStxy/ewX5JuFYSPQZN137G1HmIhk+FCa1XWfgL8GeTOtkHq/sIpYJChsK6QwxVd2/dQQLTrwmUgNLyM4brWQ7i0WhGeCDVIGCkvdkBOcPNaxJBb7vyt03ZemjnZhLXRQ== rsa-key-20050908
               ssh_pwauth: True
               disable_root: false
               chpasswd:
@@ -83,7 +86,7 @@
                 - subscription-manager repos --enable=rhel-7-server-rpms --enable=rhel-7-server-extras-rpms --enable=rhel-7-server-rh-common-rpms --enable=rhel-ha-for-rhel-7-server-rpms --enable=rhel-7-server-ose-3.5-rpms --enable=rhel-7-fast-datapath-rpms
                 # - yum update -y
                 # - yum install wget yum-utils httpd git tmux vim createrepo  -y
-                - sed -i '/OPTIONS=.*/c\OPTIONS="--selinux-enabled --log-driver=json-file --log-opt max-size=50m --insecure-registry 172.30.0.0/16"' /etc/sysconfig/docker
+                # - sed -i '/OPTIONS=.*/c\OPTIONS="--selinux-enabled --log-driver=json-file --log-opt max-size=50m --insecure-registry 172.30.0.0/16"' /etc/sysconfig/docker
               packages:
                 - wget
                 - yum-utils
@@ -98,14 +101,15 @@
                 - bash-completion
                 - nfs-utils
                 - atomic-openshift-utils
-              fs_setup:
-               - label: None
-                 filesystem: 'ext4'
-                 device: '/dev/vdb'
-                 partition: 'auto'
-
-              mounts:
-
-               - [ /dev/vdb, /OSC, "ext4", "defaults,noatime"]
-
-              mount_default_fields: [ None, None, "ext4", "defaults,noatime", "0","2" ]
+                - telnet
+              # fs_setup:
+              #  - label: None
+              #    filesystem: 'ext4'
+              #    device: '/dev/vdb'
+              #    partition: 'auto'
+              #
+              # mounts:
+              #
+              #  - [ /dev/vdb, /OSC, "ext4", "defaults,noatime"]
+              #
+              # mount_default_fields: [ None, None, "ext4", "defaults,noatime", "0","2" ]
