--- a/openshift-infra-providernet.yaml
+++ b/openshift-infra-providernet.yaml
@@ -3,6 +3,10 @@
   gather_facts: no
   tasks:
     - include: ./tasks/OCP-OSP-flavors.yml
+    - name: OpenShift
+      os_security_group_rule:
+        security_group: admin
+        remote_ip_prefix: 0.0.0.0/0
     - name: Create OCP cluster
       include: ./tasks/rhel-instance-docker-provider.yml
       with_items:
