took  package-update-upgrade-install at the end of cloudinit exec

--- a/tasks/set-quotas.yml
+++ b/tasks/set-quotas.yml
@@ -1,7 +1,6 @@
 ---
   - name: Update quotas
-    os_quota:
-      name: admin
+    os_quota: name=admin 
       backup_gigabytes: -1
       backups: -1
       cores: -1
